# ros_diff_bot

./: .gitignore  CAN_LOG_EXAMPLES.md  CMakeLists.txt  EXTRACTION_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  build.sh  package.xml  ros_diff_bot.xml  run.sh  setup.sh  setup_can.sh
bringup/config/: can_config.yaml  diffbot_controllers.yaml
bringup/launch/: diffbot.launch.py  diffbot_can.launch.py
description/launch/: view_robot.launch.py
description/ros2_control/: diffbot.ros2_control.xacro
description/urdf/: diffbot.urdf.xacro  diffbot_description.urdf.xacro
hardware/: diffbot_system.cpp
hardware/include/ros_diff_bot/: diffbot_system.hpp
test/: test_diffbot_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
